--- a/G/G.vcxproj.filters
+++ b/G/G.vcxproj.filters
@@ -22,4 +22,8 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shader\vertexShader.glsl" />
+    <None Include="shader\fragmentShader.glsl" />
+  </ItemGroup>
 </Project>
