--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,9 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+# SET language properly
+*.glsl linguist-language=GLSL
+*.c linguist-language=C
 
 ###############################################################################
 # Set default behavior for command prompt diff.
