--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,8 @@
 * text=auto
 # SET language properly
 *.glsl linguist-language=GLSL
+*.c linguist-language=C
+*.cpp linguist-language=CPP
 
 ###############################################################################
 # Set default behavior for command prompt diff.
