--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,9 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-
+*.glsl linguist-language=GLSL
+*.c linguist-language=C
+*.cpp linguist-language=CPP
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
