adding stb_image.h for image loading support it just a lib i added it so i dont need to give a fuck about handling images.

--- a/G/G.vcxproj.filters
+++ b/G/G.vcxproj.filters
@@ -26,7 +26,10 @@
     <ClInclude Include="resource.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="shaderIOC\shader_s.h">
+    <ClInclude Include="headers\shader_s.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\stb_image.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
