--- a/G/G.vcxproj
+++ b/G/G.vcxproj
@@ -143,8 +143,9 @@
     <ClCompile Include="glad.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="headers\stb_image.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="shaderIOC\shader_s.h" />
+    <ClInclude Include="headers\shader_s.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentShader.glsl" />
