--- a/G/G.vcxproj.filters
+++ b/G/G.vcxproj.filters
@@ -21,15 +21,18 @@
     <ClCompile Include="glad.c">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="headers\shader\shader_s.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="headers\shader_s.h">
+    <ClInclude Include="headers\img_loading\stb_image.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="headers\stb_image.h">
+    <ClInclude Include="headers\shader\shader_s.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
