Error handling chnaged and added some tests

--- a/G/G.vcxproj.filters
+++ b/G/G.vcxproj.filters
@@ -39,5 +39,7 @@
   <ItemGroup>
     <None Include="shader\vertexShader.glsl" />
     <None Include="shader\fragmentShader.glsl" />
+    <None Include="shader\v.glsl" />
+    <None Include="shader\f.glsl" />
   </ItemGroup>
 </Project>
