--- a/G/G.vcxproj
+++ b/G/G.vcxproj
@@ -149,7 +149,9 @@
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shader\f.glsl" />
     <None Include="shader\fragmentShader.glsl" />
+    <None Include="shader\v.glsl" />
     <None Include="shader\vertexShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
