--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,9 @@
-cmake_minimum_required(VERSION 3.20)
-project(OpenGL)
+cmake_minimum_required(VERSION 3.10)
+project(OpenGLApp)
 
 # Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 20)
 
-# Add include directories (replace with your actual include path)
-include_directories(${CMAKE_SOURCE_DIR}/Dependencies/include)
+# Include directories
+include_directories(${SOURCE_DIR})
 
-# Add library directories (replace with your actual library path)
-link_directories(${CMAKE_SOURCE_DIR}/Dependencies/lib)
-
-# Collect source files
-file(GLOB_RECURSE SRC_FILES src/*.cpp)
-
-
-# Create the executable
-add_executable(OpenGL ${SRC_FILES})
