meshloader done but OpenGL states need to be fixed now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCES
     src/implementation/camera_s.cpp
     src/implementation/gui.cpp
     src/implementation/opengl_state.cpp
+    src/implementation/opengl_utility.cpp
     src/implementation/triangulated_mesh.cpp
     src/imgui/imgui_draw.cpp
     src/imgui/imgui_impl_glfw.cpp
